# trino-ops

./: README.md  __init__.py  ddl_client.py  dml_client.py  parent_client.py  pyproject.toml
configs/: __init__.py  auth.py
configs/ops/: README.md  __init__.py
configs/ops/ddl/: __init__.py  columns.py  properties.py  schema.py  table.py
configs/ops/dml/: __init__.py  common.py  ctas.py  delete.py  insert.py  merge.py  select.py  truncate.py  update.py
configs/table/: README.md  __init__.py  column.py  schema.py  table.py
db/: client.py  executer.py  typevar.py
mixins/: __init__.py  ddl.py  dml.py  executeQuery.py  interface.py  makeCLient.py  makeConfig.py  makeSchemaTable.py  renderExec.py
sql/: README.md  __init__.py  literals.py  renderer.py  validators.py
templates/: README.md
templates/_macros/: README.md  identifiers.sql.j2  paths.sql.j2  props.sql.j2  values.sql.j2
templates/ddl/: README.md  add_columns.sql.j2  create_schema.sql.j2  create_table.sql.j2  drop_columns.sql.j2  drop_schema.sql.j2  drop_table.sql.j2  rename_column.sql.j2  rename_table.sql.j2  set_file_format.sql.j2  set_partitioning.sql.j2  set_table_location.sql.j2
templates/dml/: README.md  ctas.sql.j2  delete.sql.j2  insert_select.sql.j2  insert_values.sql.j2  merge.sql.j2  select.sql.j2  select_query.sql.j2  truncate.sql.j2  update.sql.j2
tools/: insert_normalize.py
