[project]
name = "trino_ops"
version = "0.1.0"
description = "CRUD for working with trino cluster"
authors = [
    {name = "Uladzimir Strazhenko",email = "strazhenkoandi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "trino (>=0.336.0,<0.337.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
